tests/e2e/pass/m11_file.ep
# EXIT: 0
# STDOUT: 42
# STDOUT: 2
# CLEAN: test_out.txt
fun main(): void {
    let s = "42"
    let n = write_file("test_out.txt", bytes(s))
    let inp = read_file("test_out.txt")

    let prefix = new u8[] { inp[0], inp[1] }
    println(str(prefix))
    println(str(n))
    exit(0)
}
