tests/e2e/fail/write_file_str.ep
# COMPILE_ERROR: argument 2 of 'write_file' expects u8[], got str
fun main(): void {
    write_file("out", "text")
}
